Return AnalysisResult at the end of analysis